--- a/FreelanceManager.csproj
+++ b/FreelanceManager.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
-    <Nullable>enable</Nullable>
+    <Nullable>disable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <UserSecretsId>aspnet-FreelanceManager-b4530318-4ee5-4e9b-92e3-dcd3d71a2ab1</UserSecretsId>
   </PropertyGroup>
