--- a/FreelanceManager.csproj
+++ b/FreelanceManager.csproj
@@ -14,6 +14,7 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.4" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.4" />
     <PackageReference Include="Syncfusion.Blazor" Version="28.2.12" />
+    <PackageReference Include="Syncfusion.Blazor.Themes" Version="29.1.39" />
   </ItemGroup>
 
 </Project>
