--- a/FreelanceManager.csproj
+++ b/FreelanceManager.csproj
@@ -15,6 +15,7 @@
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.4" />
     <PackageReference Include="Syncfusion.Blazor" Version="28.2.12" />
     <PackageReference Include="Syncfusion.Blazor.Themes" Version="28.2.9" />
+    <PackageReference Include="Syncfusion.Pdf.Net.Core" Version="28.2.4" />
   </ItemGroup>
 
 </Project>
